IKO/KubeDemo/HTAPDEMOK8s/htapmaster.yaml
apiVersion: v1
kind: Service
metadata:
  name: htapmaster
  labels:
    app: htapmaster
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: htapmaster
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: htapmaster
spec:
  selector:
    matchLabels:
      app: htapmaster
  replicas: 1
  template:
    metadata:
      labels:
        app: htapmaster
    spec:
      containers:
      - name: htapmaster-cont
        image: intersystemsdc/irisdemo-demo-htap:master-version-2.5.0
        ports:
        - containerPort: 80
