IKO/KubeDemo/HTAPDEMOK8s/ingest-worker1.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingest-worker1
  labels:
    app: ingest-worker1
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: ingest-worker1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingest-worker1
spec:
  selector:
    matchLabels:
      app: ingest-worker1
  replicas: 1
  template:
    metadata:
      labels:
        app: ingest-worker1
    spec:
      containers:
      - name: ingest-worker1
        image: intersystemsdc/irisdemo-demo-htap:iris-jdbc-query-worker-version-2.5.0
        ports:
        - containerPort: 8080
