IKO/KubeDemo/HTAPDEMOK8s/htap-nodes.yaml
apiVersion: v1
kind: Service
metadata:
  name: htapui
  labels:
    app: htapui
spec:
  type: LoadBalancer
  ports:
  - port: 10000
    targetPort: 4200
    protocol: TCP
    name: http
  selector:
    app: htapui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: htapui
  labels:
    app: htapui
spec:
  selector:
    matchLabels:
      role: htap
  replicas: 1
  template:
    metadata:
      labels:
        app: htapui
    spec:
      tolerations:
      - key: "htap-group"
        operator: "Exists"
        value: "true"
        effect: "NoSchedule"
      containers:
      - name: htapui
        image: intersystemsdc/irisdemo-demo-htap:ui-version-2.5.1
        ports:
        - containerPort: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: htapmaster
  labels:
    app: htapmaster
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http1
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http2
  selector:
    app: htapmaster
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: htapmaster
spec:
  selector:
    matchLabels:
      role: htap
  replicas: 1
  template:
    metadata:
      labels:
        app: htapmaster
    spec:
      tolerations:
      - key: "htap-group"
        operator: "Exists"
        value: "true"
        effect: "NoSchedule"  
      containers:
      - name: htapmaster
        image: intersystemsdc/irisdemo-demo-htap:master-version-2.5.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ingest-worker-svc
  labels:
    app: ingest-worker
spec:
  clusterIP: None
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http2
  selector:
    app: ingest-worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingest-worker
spec:
  selector:
    matchLabels:
      role: htap
  replicas: 1
  template:
    metadata:
      labels:
        app: ingest-worker
    spec:
      hostname: ingest-worker-svc
      tolerations:
      - key: "htap-group"
        operator: "Exists"
        value: "true"
        effect: "NoSchedule"  
      containers:
      - name: ingest-worker
        image: intersystemsdc/irisdemo-demo-htap:iris-xep-ingest-worker-version-2.5.1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: query-worker-svc
  labels:
    app: query-worker
spec:
  clusterIP: None
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http2
  selector:
    app: query-worker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-worker
spec:
  selector:
    matchLabels:
      role: htap
  replicas: 1
  template:
    metadata:
      labels:
        app: query-worker
    spec:
      hostname: query-worker-svc
      tolerations:
      - key: "htap-group"
        operator: "Exists"
        value: "true"
        effect: "NoSchedule"  
      containers:
      - name: query-worker
        image: intersystemsdc/irisdemo-demo-htap:iris-jdbc-query-worker-version-2.5.1
        ports:
        - containerPort: 8080
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: htapui-ingress
spec:
  backend:
    serviceName: htapui
    servicePort: 10000
